# macro_b3_bot

./: .env  .env.example  .gitignore  DATA_SOURCES.md  DECISION_POLICY.md  MIGRATION_CHECKLIST.md  README.md  REUSE_PLAN.md  implementation_plan.json  main.py  pyproject.toml
.github/workflows/: ci.yml
REFERENCES/: SPRINT_4C3_PILOT_AUDIT.md
REFERENCES/macro_b3_bot_blueprint/: ARCHITECTURE.md  README.md
config/: bcb_series.yaml  causal_graph.yaml  company_exposure_pilot.yaml  company_ticker_cvm_pilot.yaml  cvm_sources.yaml  global_macro_series.yaml  ipe_categories.yaml  macro_event_rules.yaml  sector_mappings.json  settings.py
core/analytics/: asset_screener.py  tribunal_consensus.py
core/data_ingestion/: b3_screener_bridge.py  macro_api_client.py  youtube_transcriber.py
core/execution/: portfolio_allocator.py  report_generator.py
core/mirofish_engine/: swarm_simulation.py
data/: audit.duckdb  market_info_cache.json  reuse_manifest.json
data/audits/: README.md  b3_historical_acquisition_manifest.json  (+26 more)
scripts/: analyze_ipe_queue.py  audit_cvm.py  audit_event_candidates.py  audit_text_content.py  b3_export_contract.example.js  bootstrap_windows.ps1  check_ticker_map.py  db_audit.py  debug_consolidator.py  ingest_b3.py  ingest_bcb.py  ingest_cvm.py  ingest_cvm_ipe.py  inspect_raw_html.py  inspect_text_context.py  install_to_target.ps1  process_cvm_ipe.py  reextract_with_magic.py  reset_pdf_extraction.py  run_sprint3a.py  run_sprint3a_full.py  run_sprint4e2_historical_assembly.py  test_extraction.py
tests/: test_b3_ingestion.py  test_bcb_expectations.py  test_bcb_sgs.py  test_causal_graph.py  test_company_exposure.py  test_company_exposure_documents.py  test_cvm_audit.py  test_cvm_registry.py  test_cvm_restatements.py  test_cvm_statements.py  test_cvm_zip_reader.py  test_event_candidate.py  test_event_consolidation.py  test_financial_bridge.py  test_financial_calibration.py  test_ipe_deduplication.py  test_ipe_download.py  test_ipe_evidence.py  test_ipe_extraction.py  test_ipe_idempotency.py  test_ipe_index.py  test_ipe_prioritization.py  test_macro_bot.py  test_pit_horizon_integrity.py  test_pit_integrity.py  test_pseudo_replication.py  test_scoring.py  test_sprint3a_integration.py  test_sprint3b.py  test_sprint4a.py  test_sprint4e2_assembly.py  test_temporal_integrity.py  test_valuation_readiness.py
(+120 files in other folders)
