[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-b3-bot"
version = "0.1.0"
description = "Event-driven macro intelligence and B3 allocation research bot"
requires-python = ">=3.11,<3.13"
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "typer>=0.12,<1",
  "rich>=13.7,<14",
  "duckdb>=1.0,<2",
  "PyYAML>=6.0,<7",
  "pandas>=2.2,<3",
  "yfinance>=0.2.50,<1",
  "pypdf>=6,<7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2"
]

[project.scripts]
macro-b3 = "macro_b3_bot.interfaces.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
