[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-b3-bot"
version = "0.1.0"
description = "Event-driven macro intelligence and B3 allocation research bot"
requires-python = ">=3.11,<3.13"
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "typer>=0.12,<1",
  "rich>=13.7,<14",
  "duckdb>=1.0,<2",
  "PyYAML>=6.0,<7",
  "pandas>=2.2,<3",
  "numpy>=1.26,<3",
  "yfinance>=0.2.50,<1",
  "pypdf>=6,<7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2"
]

[project.scripts]
macro-b3 = "macro_b3_bot.interfaces.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
exclude = ["REFERENCES"]

[tool.ruff.lint]
# Only enforce hard errors: pyflakes (F) + critical pycodestyle (E4/E7/E9)
# W2xx whitespace, I001 import-sort and E501 are left to future cleanup
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# scripts and legacy core use sys.path manipulation before imports
"scripts/*.py" = ["E402", "F401", "F841"]
"main.py" = ["E402", "F401"]
"core/**/*.py" = ["E402", "F401", "F841", "E701"]
# tests also use sys.path.insert pattern from legacy sprint files
"tests/*.py" = ["E402"]
